# slog

./: .gitignore  CMakeLists.txt  README.md
src/: slog.c  slog.h
test/: CMakeLists.txt  slogtest.c
